--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: black;
+}
+
 h1 {
   font-family: Verdana;
   font-weight: normal;
@@ -9,4 +13,18 @@ h1 {
   color: aquamarine;
   font-size: 16px;
   text-align: center;
+}
+h2 {
+  font-family: Verdana;
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+  text-align: center;
+}
+h3 {
+  font-family: verdana;
+  font-size: 21px;
+  color: gray;
+  text-align: center;
+  font-weight: normal;
 }
