--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,14 @@
 body {
   background-color: black;
 }
-
+h1, h2, h3, p {
+  font-family: verdana;
+  text-align: center;
+}
 h1 {
-  font-family: Verdana;
   font-weight: normal;
   font-size: 50px;
   color: white;
-  text-align: center;
 }
 #download {
   color: aquamarine;
@@ -15,16 +16,16 @@ h1 {
   text-align: center;
 }
 h2 {
-  font-family: Verdana;
   font-weight: 300;
   font-size: 42px;
   color: white;
-  text-align: center;
 }
 h3 {
-  font-family: verdana;
   font-size: 21px;
   color: gray;
-  text-align: center;
   font-weight: normal;
+}
+#copyright {
+  text-align: right;
+  color: gray;
 }
